# project-callisto

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: CompileOptions.cmake
game/: CMakeLists.txt  imgui.ini
game/assets/: License.txt  terrain.json
game/assets/map/: dirt.afdesign  dirt.tga  grass.afdesign  grass.tga  stone.afdesign  stone.tga
game/assets/script/: test.lua
game/include/umbriel/: Components.hpp  FlatShader.hpp  GameState.hpp  ImContext.hpp  ImContext.inl  Log.hpp  State.hpp  Types.hpp
game/include/umbriel/physics/: Body.hpp  BoxShape.hpp  ChipmunkHandle.hpp  CircleShape.hpp  SegmentShape.hpp  Shape.hpp  Space.hpp
game/resource/imgui/: ImGui.frag  ImGui.vert  resource.conf
game/resource/shaders/: Flat.frag  Flat.vert  resource.conf
game/resource/shaders/hex/: frag.glsl  geo.glsl  vert.glsl
game/resource/sprites/: resource.conf
game/source/: Components.cpp  Components.hpp  FlatShader.cpp  GameState.cpp  HexGrid.cpp  HexGrid.hpp  ImContext.cpp  ImContext.hpp  ScriptContext.cpp  ScriptContext.hpp  State.cpp  Types.hpp  main.cpp
game/source/hex/: Coords.cpp  Coords.hpp  Feature.hpp  Grid.cpp  Grid.hpp  Tile.cpp  Tile.hpp  all.hpp
game/source/physics/: Body.cpp  BoxShape.cpp  CircleShape.cpp  SegmentShape.cpp  Shape.cpp  Space.cpp
scripting/: CMakeLists.txt
scripting/math/: CMakeLists.txt
scripting/math/include/callisto/: binding-math.hpp
scripting/math/include/callisto/binding/: angle.hpp  complex.hpp  mat.hpp  quat.hpp  vec2.hpp  vec3.hpp  vec4.hpp
scripting/math/source/: angle.cpp  complex.cpp  mat.cpp  quat.cpp  vec2.cpp  vec3.cpp  vec4.cpp
src/Corrade/TestSuite/Test/TesterTestFiles/: saveDiagnosticFailedEnabled.txt
src/MagnumExternal/: CMakeLists.txt
